# mlds6_ft

./: MLproject  README.md  docker-compose.yml  pyproject.toml
modft/: data.py  models.py  viz.py
scripts/: test.py  train.py
