[tool.poetry]
name = "modft"
version = "0.1.0"
description = "Modelo Fine Tunning con ResNet50V2"
authors = ["Marco Julio Gómez <margomeza16@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
docker-compose = "^1.29.2"
mlflow = "^2.0.1"
tensorflow = "^2.11.0"


[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
